# fox-stealer

./: CMakeLists.txt  README.md  conandata.yml
builder/: CMakeLists.txt  FoxStealer.qmlproject  FoxStealer.qmlproject.qtds  main.cpp  qds.cmake
builder/App/: main.cpp
builder/App/autogen/: environment.h
builder/FoxStealer/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  FsPayloadGeneratingService.qml  qmldir
builder/FoxStealer/designer/: plugin.metainfo
builder/FoxStealerContent/: App.qml  CMakeLists.txt  Main.ui.qml
builder/Service/: CMakeLists.txt  PayloadGeneratingService.cpp  PayloadGeneratingService.h
builder/view/: Main.qml
payload/: CMakeLists.txt  main.cpp  net.h
payload/crypto/: aead.cpp  aead.h
payload/messages/: error_message.h  file_message.h  message.h  photo_message.h  text_message.h
payload/senders/: sender.h  telegram_sender.cpp  telegram_sender.h
payload/stealers/: base_stealer.h  chrome_stealer.cpp  chrome_stealer.h  srceenshot_stealer.cpp  srceenshot_stealer.h  win_stealer.cpp  win_stealer.h  zip_stealer.cpp  zip_stealer.h  zipable.h
